--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-leaflet": "^4.2.1",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.8.4",
     "@types/google-map-react": "^2.1.10",
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.37",
